--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Marco Steinke",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-fetch": "^3.0.0"
   }
 }
